syntax = "proto3";

package lockets.store;

option go_package = "gen/store";

message ActivityLocketCommentPayload {
  int32 locket_id = 1;
  int32 related_locket_id = 2;
}

message ActivityVersionUpdatePayload {
  string version = 1;
}

message ActivityPayload {
  ActivityLocketCommentPayload locket_comment = 1;
  ActivityVersionUpdatePayload version_update = 2;
}
